--- a/src/containers/container.module.scss
+++ b/src/containers/container.module.scss
@@ -3,7 +3,7 @@
 
 .issue-container {
   width: 100% !important;
-  padding: 3rem;
+  padding: 1rem;
 
   @include breakpoint(lg) {
     width: 90% !important;
